# LaVanguardiaDelBastion

./: .gitignore  BastionCoreChatGpttV.1.0.md  BastionLAN_Core.yaml  Cargo.toml  ElUltimoBastionIAGOOOO.md  Guia para jugadores.txt  Manual de la Vanguardia del Bastión  README.md
src/: dice.rs  events.rs  lib.rs  persistence.rs  protocol.rs  session.rs  world.rs
src/ai/: mod.rs  providers.rs
